Including account managment

--- a/contacts-ddd-portal/ClientApp/src/app/shared/components/footer/footer.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,7 @@
 <footer>
-  <div style="margin: 8px;">
-    <hr>
-    <p>&copy; RD Informática {{today | date:'mediumDate'}}</p>
+  <div class="fixed-bottom bg-light">
+    <div class="container">
+      <p>&copy; RD Informática {{today | date:'mediumDate'}}</p>
+    </div>
   </div>
 </footer>
