--- a/contacts-ddd-portal/ClientApp/src/app/app.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/app.component.html
@@ -2,5 +2,5 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<app-message></app-message>
+<ap-message></ap-message>
 <ap-footer></ap-footer>
