--- a/contacts-ddd-portal/ClientApp/src/app/contacts/phone/phone-details/phone-details.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/phone/phone-details/phone-details.component.html
@@ -1,22 +1,25 @@
-<div class="container">
-  <h1>Phone</h1>
-  <form *ngIf="phone">
-    <div>
-      <label>Number:</label>
-      <input type="text" name="number" [(ngModel)]="phone.number" ap-autofocus class="form-control">
+<h1>Phone</h1>
+
+<form *ngIf="phone">
+  <div class="row">
+    <div class="col-6">
+      <div class="form-group">
+        <label>Number:</label>
+        <input type="text" name="number" [(ngModel)]="phone.number" ap-autofocus class="form-control">
+      </div>
+
+      <div class="form-group">
+        <label>Type:</label>
+        <select class="form-control" [(ngModel)]="phone.type" name="type">
+          <option *ngFor="let item of keys()" [ngValue]="item">{{item}}</option>
+        </select>
+      </div>
     </div>
+  </div>
 
-    <div>
-      <label>Type:</label>
-      <select class="form-control" [(ngModel)]="phone.type" name="type">
-        <option *ngFor="let item of keys()" [ngValue]="item">{{item}}</option>
-     </select>
-    </div>
+  <hr>
 
-    <hr>
+  <button class="btn btn-success mr-1" (click)="edit()"><i class="fa fa-save"></i></button>
+  <button class="btn btn-outline-info" (click)="goBack()"><i class="fa fa-table"></i></button>
 
-    <button class="btn btn-success mr-1" (click)="edit()"><i class="fa fa-save"></i></button>
-    <button class="btn btn-outline-info" (click)="goBack()"><i class="fa fa-table"></i></button>
-
-  </form>
-</div>
+</form>
