--- a/contacts-ddd-portal/ClientApp/src/app/shared/components/header/header.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/shared/components/header/header.component.html
@@ -30,7 +30,7 @@
         <a class="nav-link dropdown-toggle"
           id="navbarDropdown" role="button"
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Olá, {{user.userName}}
+          Olá, {{user.username}}
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <button class="dropdown-item" [routerLink]="['account']">
