Drawer navigation created

--- a/contacts-ddd-portal/ClientApp/src/app/app.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/app.component.html
@@ -1,7 +1,6 @@
 <ap-header></ap-header>
-<ap-loading></ap-loading>
 <div class="container">
   <router-outlet></router-outlet>
+  <hr class="mt-5">
 </div>
-<ap-message></ap-message>
 <ap-footer></ap-footer>
