--- a/contacts-ddd-portal/ClientApp/src/app/shared/components/footer/footer.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer>
-  <div class="fixed-bottom bg-light">
+<footer class="footer">
+  <div class="bg-light">
     <div class="container">
       <p>&copy; RD Informática {{today | date:'mediumDate'}}</p>
     </div>
