--- a/contacts-ddd-portal/ClientApp/src/app/shared/components/header/header.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/shared/components/header/header.component.html
@@ -1,38 +1,42 @@
 <header class="fixed-top">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" [routerLink]="['home']">{{title}}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['home']">Home <span class="sr-only">(current)</span></a>
-        </li>
+  <ap-loading></ap-loading>
+  <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a class="navbar-brand">
+      <i (click)="menu.toggle()" class="fa fa-bars mr-2"></i>
+      Contacts DDD
+    </a>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+          <a class="nav-link" [routerLink]="['home']">Home</a>
+      </li>
+    </ul>
+    <div *ngIf="!isLogged(); else accountmenu">
+      <form class="form-inline my-2 my-lg-0" >
+        <button class="btn btn-success my-2 my-sm-0" [routerLink]="['/home','login']">Login</button>
+      </form>
+    </div>
+    <ap-menu #menu>
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['contacts']" *ngIf="user">Contacts</a>
+          <strong>
+            <a class="nav-link" [routerLink]="['contacts']" (click)="menu.toggle()">Contacts</a>
+          </strong>
         </li>
       </ul>
-      <div *ngIf="!user; else navbar">
-        <form class="form-inline my-2 my-lg-0" >
-          <a class="btn btn-success my-2 my-sm-0" [routerLink]="['home/login']">Login</a>
-        </form>
-      </div>
-    </div>
+    </ap-menu>
   </nav>
 </header>
+<ap-message></ap-message>
 
-<ng-template #navbar>
+<ng-template #accountmenu>
   <form class="form-inline my-2 my-lg-0" *ngIf="user">
     <ul class="navbar-nav mr-auto form-inline">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"
-          id="navbarDropdown" role="button"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          data-toggle="dropdown">
           Olá, {{user.username}}
         </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu dropdown-menu-right">
           <button class="dropdown-item" [routerLink]="['account']">
             <i class="fa fa-user-circle"></i> Account
           </button>
