--- a/contacts-ddd-portal/ClientApp/src/app/home/index/index.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/home/index/index.component.html
@@ -1,28 +1,56 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
   <div class="container">
-    <h1 class="display-3">Hello, world!</h1>
-    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    <h1 class="display-3">Bem vindo!</h1>
+    <p>Somos um empresa comprometida em resolver a solução de seus problemas!</p>
+    <br>
+    <br>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Sobre nós &raquo;</a></p>
   </div>
 </div>
 
-<!-- Example row of columns -->
-<div class="row">
-  <div class="col-md-4">
-    <h2>Heading</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+<div class="container">
+
+  <!-- Example row of columns -->
+  <div class="row">
+    <div class="col-8">
+      <p>Há
+        24 anos no mercado de Auto Peças, tudo
+        com procedência legal. Trabalhamos com Nacionais,
+        Importados, Gasolina, Alcool, Diesel, Novos, Usados.
+        Compramos veículos acidentados no estado
+        de sucata e recuperáveis. Temos mecânica
+        em geral.</p>
+    </div>
+    <div class="col-4">
+      <img class="img-fluid img-thumbnail" src="../../../assets/img/foto-ref-001.jpg" alt="">
+    </div>
   </div>
-  <div class="col-md-4">
-    <h2>Heading</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+
+  <div class="row mt-2">
+    <div class="col-4">
+      <img class="img-fluid img-thumbnail" src="../../../assets/img/foto-ref-003.jpg" alt="">
+    </div>
+    <div class="col-8">
+      <p>Se
+        voce precisar de turbinas, válvulas injetoras,
+        cruzetas, cardans, direção hidraulica,
+        escapamentos, radiadores, condensadores, suspenções,
+        paineis, velocímetros, rodas, amortecedores,
+        vidros, bobinas, atuadores, fluxos de ar, Venha
+        para Joa's Car.</p>
+    </div>
   </div>
-  <div class="col-md-4">
-    <h2>Heading</h2>
-    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+
+  <div class="row mt-2">
+    <div class="col-8">
+      <p>Possuimos
+        vasta linha de produtos das mais diuversas marcas.
+        Tudo com a melhor qualidade, segurança
+        e garantia pra você.</p>
+    </div>
+    <div class="col-4">
+      <img class="img-fluid img-thumbnail" src="../../../assets/img/foto-ref-002.jpg" alt="">
+    </div>
   </div>
 </div>
-
