--- a/contacts-ddd-portal/ClientApp/src/app/contacts/contact-list/contact-list.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/contact-list/contact-list.component.html
@@ -1,73 +1,76 @@
-<h2>
-  <button class="btn btn-outline-success mr-1" [routerLink]="['new']"> <i class="fa fa-plus-circle"></i></button>
-  Contacts</h2>
-<hr>
-<div *ngIf="!pagedItems">Loading...</div>
+<div class="container">
 
-<div *ngIf="pagedItems">
-  <div style="padding-bottom: 8px; padding-top: 8px;">
-    <!-- pager-->
-    <div class="row mt-2">
-      <div class="col-4">
-        <input type="text" name="filter" placeholder="Filter" class="form-control" ap-autofocus (keyup)="debounce.next($event.target.value)">
-      </div>
-      <div class="col-8">
-        <ul *ngIf="pager && pager.pages.length" class="pagination justify-content-end">
-          <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
-              <a class="page-link" (click)="firstPage()">First</a>
-          </li>
-          <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
-              <a class="page-link" (click)="priorPage()">Previous</a>
-          </li>
-          <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
-              <a class="page-link" (click)="selectedPage(page)">{{page + 1}}</a>
-          </li>
-          <li class="page-item" [ngClass]="{disabled: isLastPage()}">
-              <a class="page-link" (click)="nextPage()">Next</a>
-          </li>
-          <li class="page-item" [ngClass]="{disabled: isLastPage()}">
-              <a class="page-link" (click)="lastPage()">Last</a>
-          </li>
-        </ul>
+  <h2>
+    <button class="btn btn-outline-success mr-1" [routerLink]="['new']"> <i class="fa fa-plus-circle"></i></button>
+    Contacts</h2>
+  <hr>
+  <div *ngIf="!pagedItems">Loading...</div>
+
+  <div *ngIf="pagedItems">
+    <div style="padding-bottom: 8px; padding-top: 8px;">
+      <!-- pager-->
+      <div class="row mt-2">
+        <div class="col-4">
+          <input type="text" name="filter" placeholder="Filter" class="form-control" ap-autofocus (keyup)="debounce.next($event.target.value)">
+        </div>
+        <div class="col-8">
+          <ul *ngIf="pager && pager.pages.length" class="pagination justify-content-end">
+            <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
+                <a class="page-link" (click)="firstPage()">First</a>
+            </li>
+            <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
+                <a class="page-link" (click)="priorPage()">Previous</a>
+            </li>
+            <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+                <a class="page-link" (click)="selectedPage(page)">{{page + 1}}</a>
+            </li>
+            <li class="page-item" [ngClass]="{disabled: isLastPage()}">
+                <a class="page-link" (click)="nextPage()">Next</a>
+            </li>
+            <li class="page-item" [ngClass]="{disabled: isLastPage()}">
+                <a class="page-link" (click)="lastPage()">Last</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
+
+    <table id="contactsTable" class="table table-striped">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>Name</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let contact of (pagedItems | filterByName: filter)">
+          <th>{{contact.id}}</th>
+          <td>{{contact.name}}</td>
+          <td style="text-align: right;">
+            <button class="btn btn-primary mr-1" [routerLink]="['edit', contact.id]"> <i class="fa fa-edit"></i></button>
+            <button class="btn btn-outline-danger" (click)="delete(contact.id)"> <i class="fa fa-remove"></i></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <ul *ngIf="pager && pager.pages.length" class="pagination justify-content-end">
+      <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
+          <a class="page-link" (click)="firstPage()">First</a>
+      </li>
+      <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
+          <a class="page-link" (click)="priorPage()">Previous</a>
+      </li>
+      <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+          <a class="page-link" (click)="selectedPage(page)">{{page + 1}}</a>
+      </li>
+      <li class="page-item" [ngClass]="{disabled: isLastPage()}">
+          <a class="page-link" (click)="nextPage()">Next</a>
+      </li>
+      <li class="page-item" [ngClass]="{disabled: isLastPage()}">
+          <a class="page-link" (click)="lastPage()">Last</a>
+      </li>
+    </ul>
   </div>
-
-  <table id="contactsTable" class="table table-striped">
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let contact of (pagedItems | filterByName: filter)">
-        <th>{{contact.id}}</th>
-        <td>{{contact.name}}</td>
-        <td style="text-align: right;">
-          <button class="btn btn-primary mr-1" [routerLink]="['edit', contact.id]"> <i class="fa fa-edit"></i></button>
-          <button class="btn btn-outline-danger" (click)="delete(contact.id)"> <i class="fa fa-remove"></i></button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-
-  <ul *ngIf="pager && pager.pages.length" class="pagination justify-content-end">
-    <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
-        <a class="page-link" (click)="firstPage()">First</a>
-    </li>
-    <li class="page-item" [ngClass]="{disabled: isFirstPage()}">
-        <a class="page-link" (click)="priorPage()">Previous</a>
-    </li>
-    <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
-        <a class="page-link" (click)="selectedPage(page)">{{page + 1}}</a>
-    </li>
-    <li class="page-item" [ngClass]="{disabled: isLastPage()}">
-        <a class="page-link" (click)="nextPage()">Next</a>
-    </li>
-    <li class="page-item" [ngClass]="{disabled: isLastPage()}">
-        <a class="page-link" (click)="lastPage()">Last</a>
-    </li>
-  </ul>
 </div>
