--- a/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-add/contacts-add.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-add/contacts-add.component.html
@@ -1,25 +1,28 @@
-<h3>Contact</h3>
+<div class="container">
 
-<form [formGroup]="form">
-  <div>
-    <div class="form-group">
-      <div class="col-6">
-        <label>Name
-          <div class="text-right">
-            <ap-validation-message
-              *ngIf="form.get('name').errors?.required"
-              message="Contact name is required!">
-            </ap-validation-message>
-          </div>
-        </label>
-        <input type="text" formControlName="name" name="name" class="form-control" ap-autofocus />
+  <h3>Contact</h3>
+
+  <form [formGroup]="form">
+    <div>
+      <div class="form-group">
+        <div class="col-6">
+          <label>Name
+            <div class="text-right">
+              <ap-validation-message
+                *ngIf="form.get('name').errors?.required"
+                message="Contact name is required!">
+              </ap-validation-message>
+            </div>
+          </label>
+          <input type="text" formControlName="name" name="name" class="form-control" ap-autofocus />
+        </div>
+
       </div>
-
     </div>
-  </div>
 
-  <hr>
+    <hr>
 
-  <button class="btn btn-success mr-1" [disabled]="form.invalid" (click)="save()"><i class="fa fa-save"></i></button>
-  <button class="btn btn-outline-info" (click)="goBack()"><i class="fa fa-table"></i></button>
-</form>
+    <button class="btn btn-success mr-1" [disabled]="form.invalid" (click)="save()"><i class="fa fa-save"></i></button>
+    <button class="btn btn-outline-info" (click)="goBack()"><i class="fa fa-table"></i></button>
+  </form>
+</div>
