--- a/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-details/contacts-details.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/contacts/contacts-details/contacts-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="contact">
+<div class="container" *ngIf="contact">
   <h3>
     <button class="btn btn-outline-success mr-1" routerLink="/contacts/new"><i class="fa fa-plus-circle"></i></button>
     Contact
