--- a/contacts-ddd-portal/ClientApp/src/app/shared/components/footer/footer.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,8 @@
-<footer class="footer">
-  <div class="bg-light">
-    <div class="container">
+<div class="container">
+  <hr class="mt-5">
+  <footer class="footer">
+    <div class="bg-light">
       <p>&copy; RD Informática {{today | date:'mediumDate'}}</p>
     </div>
-  </div>
-</footer>
+  </footer>
+</div>
