--- a/contacts-ddd-portal/ClientApp/src/app/shared/components/menu/menu.component.css
+++ b/contacts-ddd-portal/ClientApp/src/app/shared/components/menu/menu.component.css
@@ -24,3 +24,10 @@
   bottom: 0;
   background: rgba(0,0,0, 0.4);
 }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
