Included a global error handler

--- a/contacts-ddd-portal/ClientApp/src/app/shared/components/message/message.component.html
+++ b/contacts-ddd-portal/ClientApp/src/app/shared/components/message/message.component.html
@@ -1,4 +1,4 @@
-<div *ngFor='let message of messages' style="position: fixed; top: 60px; right: 8px; min-height: 200px;">
+<div *ngFor='let message of messages' style="position: fixed; top: 60px; right: 8px; min-height: 200px; z-index: 1;">
   <div class="card {{getMessageClass(message)}} fade-in" style="position: relative; font-size: x-small;">
     <h5 class="card-header">
       <div class="float-left">Contacts DDD</div>
